--- a/about-me.html
+++ b/about-me.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-<meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8" />
     <meta name="description" content="A frontend dashboard for the
 TrackMe application" />
     <meta name="Gaurav" content="ENTER YOUR NAME HERE" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrackMe</title>
   </head>
   <body>
     <h1>GAURAV BANSAL</h1>
+
+    <h3>My hobbies are: </h3>
+    <p>Playing football, running, listening to music or podcasts</p>
+    
+    <h3>My skills are: </h3>
+    <p>Leadership, good communication skills, stay positive</p>
+
+    <h3>I'm aiming for a High Distinction grade in this unit.
+        <br><br> Units for this semester are:
+    </h3>
+
+    <p>SIT209
+        <br>SIT221
+        <br>SIT202
+    </p>
+
   </body>
 </html>
